feat: implement dynamic product insertion feature inside invoice editing screen
